--- a/index.html
+++ b/index.html
@@ -1,18 +1,129 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Simple To-Do List</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>To-Do List</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
-        <h1>My To-Do List</h1>
-        <input type="text" id="taskInput" placeholder="Enter a new task">
-        <button id="addButton">Add Task</button>
-        <ul id="taskList"></ul>
-    </div>
-    <script src="script.js"></script>
+    <style>
+    body {
+    font-family: Arial, sans-serif;
+    background-color: #f4f4f4;
+    color: #333;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 0;
+    padding: 20px;
+}
+
+h1 {
+    color: #333;
+    margin-bottom: 20px;
+}
+
+input[type="text"] {
+    padding: 10px;
+    font-size: 16px;
+    border: 1px solid #ddd;
+    border-radius: 4px;
+    width: 300px;
+    max-width: 100%;
+}
+
+.hi {
+    padding: 10px 15px;
+    font-size: 16px;
+    color: #fff;
+    background-color: #5cb85c;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    margin-left: 10px;
+    margin-top: 15px
+}
+
+.hi:hover {
+    background-color: #4cae4c;
+}
+
+ul {
+    list-style-type: none;
+    padding: 0;
+    width: 300px;
+    max-width: 100%;
+}
+
+li {
+    background-color: #fff;
+    border: 1px solid #ddd;
+    border-radius: 4px;
+    padding: 10px;
+    margin-top: 5px;
+    font-size: 16px;
+    position: relative;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+li:nth-child(even) {
+    background-color: #f9f9f9;
+}
+
+.remove-button {
+    padding: 5px 10px;
+    font-size: 14px;
+    color: #fff;
+    background-color: #d9534f;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+.remove-button:hover {
+    background-color: #c9302c;
+}
+    
+    
+    </style>
+    <h1>My To-Do List</h1>
+
+    <input type="text" id="taskInput" placeholder="Enter a new task">
+    <button class="hi" onClick="addTask()">Add Task</button>
+
+    <ul id="taskList"></ul>
+
+    <script>
+    function addTask() {
+        var input = document.getElementById("taskInput");
+        var taskList = document.getElementById("taskList");
+
+        // Create a new list item
+        var newTask = document.createElement("li");
+
+        // Create a span for the task text
+        var taskText = document.createElement("span");
+        taskText.textContent = input.value;
+
+        // Create a remove button
+        var removeButton = document.createElement("button");
+        removeButton.textContent = "Remove";
+        removeButton.className = "remove-button";
+        removeButton.onclick = function() {
+            taskList.removeChild(newTask);
+        };
+
+        // Append the text and button to the list item
+        newTask.appendChild(taskText);
+        newTask.appendChild(removeButton);
+
+        // Add the list item to the task list
+        taskList.appendChild(newTask);
+
+        // Clear the input field
+        input.value = "";
+    }
+    </script>
 </body>
 </html>
