--- a/index.html
+++ b/index.html
@@ -30,7 +30,15 @@ input[type="text"] {
     width: 300px;
     max-width: 100%;
 }
-
+input[type="time"] {
+        padding: 10px;
+        font-size: 16px;
+        border: 1px solid #ddd;
+        border-radius: 4px;
+        width: 150px;
+        max-width: 100%;
+        margin-top: 10px;
+}
 .hi {
     padding: 10px 15px;
     font-size: 16px;
