--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <title>To-Do List</title>
     <link rel="stylesheet" href="style.css">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8550297850834814"
+     crossorigin="anonymous"></script>
 </head>
 <body>
     <style>
