--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="style.css">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8550297850834814"
      crossorigin="anonymous"></script>
+    <meta name="google-adsense-account" content="ca-pub-8550297850834814">
 </head>
 <body>
     <style>
